GearsetPOC/force-app/main/default/objects/SalesforcePackageLink__x/SalesforcePackageLink__x.object-meta.xml
<CustomObject>
    <description>SalesforcePackageLink</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforcePackageLink</externalName>
    <label>Salesforce Package Links</label>
    <pluralLabel>Salesforce Package Links</pluralLabel>
</CustomObject>