GearsetPOC/force-app/main/default/objects/SalesforcePackageLink__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>