GearsetPOC/force-app/main/default/objects/SalesforcePackageLink__x/fields/ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ModifiedBy__c</fullName>
    <externalDeveloperName>ModifiedBy</externalDeveloperName>
    <label>ModifiedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>