GearsetPOC/force-app/main/default/objects/SalesforcePackageLink__x/fields/Pnr__c.field-meta.xml
<CustomField>
    <fullName>Pnr__c</fullName>
    <description>Pnr</description>
    <externalDeveloperName>Pnr</externalDeveloperName>
    <label>Pnr</label>
    <length>128</length>
    <type>Text</type>
</CustomField>