GearsetPOC/force-app/main/default/objects/SalesforcePackageLink__x/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <description>StatusDescription</description>
    <externalDeveloperName>StatusDescription</externalDeveloperName>
    <label>StatusDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>